SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Amount__c.field-meta.xml
<CustomField>
        <fullName>Amount__c</fullName>
        <description>The amount of the Actual line item, Committed line item, or Forecast line item.</description>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>