SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Amount_USD__c.field-meta.xml
<CustomField>
        <fullName>Amount_USD__c</fullName>
        <label>Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>