SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Apr_Budget__c.field-meta.xml
<CustomField>
        <fullName>Apr_Budget__c</fullName>
        <description>April Budget</description>
        <label>Apr Plan</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>