SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Campaign_Year__c.field-meta.xml
<CustomField>
        <fullName>Campaign_Year__c</fullName>
        <formula>ParentCampaign__r.Year__c</formula>
        <label>Campaign Year</label>
        <type>Text</type>
    </CustomField>