SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Customer__c.field-meta.xml
<CustomField>
        <fullName>Customer__c</fullName>
        <description>Customer for Campaign Planning</description>
        <label>Customer</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>