SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Debit_Date__c.field-meta.xml
<CustomField>
        <fullName>Debit_Date__c</fullName>
        <label>Debit Date</label>
        <type>Date</type>
    </CustomField>