SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Document_Date__c.field-meta.xml
<CustomField>
        <fullName>Document_Date__c</fullName>
        <label>Document Date</label>
        <type>Date</type>
    </CustomField>