SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Document_Text__c.field-meta.xml
<CustomField>
        <fullName>Document_Text__c</fullName>
        <label>Document Text</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>