SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Dupe_Key_Text__c.field-meta.xml
<CustomField>
        <fullName>Dupe_Key_Text__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Text value to check for uniqueness in Forecast values.</inlineHelpText>
        <label>Dupe Key Text</label>
        <length>140</length>
        <type>Text</type>
        <unique>true</unique>
    </CustomField>