SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Feb_Budget__c.field-meta.xml
<CustomField>
        <fullName>Feb_Budget__c</fullName>
        <description>February Budget</description>
        <inlineHelpText>Planned budget for February month</inlineHelpText>
        <label>Feb Plan</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>