SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Fiscal_Year__c.field-meta.xml
<CustomField>
        <fullName>Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>