SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Full_Year_Budget__c.field-meta.xml
<CustomField>
        <fullName>Full_Year_Budget__c</fullName>
        <formula>Jan_Budget__c + Feb_Budget__c + Mar_Budget__c + Apr_Budget__c + May_Budget__c + Jun_Budget__c + Jul_Budget__c + Aug_Budget__c + Sep_Budget__c +  Oct_Budget__c  +  Nov_Budget__c  +  Dec_Budget__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Year Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>