SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/GLDescription__c.field-meta.xml
<CustomField>
        <fullName>GLDescription__c</fullName>
        <description>Cost Element description field from SAP.</description>
        <label>GL Description</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>