SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/IOCode__c.field-meta.xml
<CustomField>
        <fullName>IOCode__c</fullName>
        <label>IO Code</label>
        <length>12</length>
        <type>Text</type>
    </CustomField>