SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Jan_Budget__c.field-meta.xml
<CustomField>
        <fullName>Jan_Budget__c</fullName>
        <description>January Budget</description>
        <inlineHelpText>Planned Budget for January month</inlineHelpText>
        <label>Jan Plan</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>