SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Jul_Budget__c.field-meta.xml
<CustomField>
        <fullName>Jul_Budget__c</fullName>
        <description>July Budget</description>
        <label>Jul Plan</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>