SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/May_Budget__c.field-meta.xml
<CustomField>
        <fullName>May_Budget__c</fullName>
        <description>May Budget</description>
        <label>May Plan</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>