SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Monthly_Planning__c.field-meta.xml
<CustomField>
        <fullName>Monthly_Planning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Monthly Planning</label>
        <referenceTo>Campaign_Spend__c</referenceTo>
        <relationshipLabel>Campaign Planning - Amount</relationshipLabel>
        <relationshipName>MonthlyPlanning</relationshipName>
        <type>Lookup</type>
    </CustomField>