SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Notes__c.field-meta.xml
<CustomField>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>