SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Oct_Budget__c.field-meta.xml
<CustomField>
        <fullName>Oct_Budget__c</fullName>
        <label>Oct Plan</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>