SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/ParentCampaign__c.field-meta.xml
<CustomField>
        <fullName>ParentCampaign__c</fullName>
        <label>Master Campaign</label>
        <referenceTo>Campaign__c</referenceTo>
        <relationshipLabel>Campaign Spend</relationshipLabel>
        <relationshipName>Campaign_Spend</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>