SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Period__c.field-meta.xml
<CustomField>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>