SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Posting_Date__c.field-meta.xml
<CustomField>
        <fullName>Posting_Date__c</fullName>
        <description>The Posting Date for SAP Actual.</description>
        <label>Posting Date</label>
        <type>Date</type>
    </CustomField>