SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/PR_Header__c.field-meta.xml
<CustomField>
        <fullName>PR_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PR Header</label>
        <referenceTo>PR_Header__c</referenceTo>
        <relationshipLabel>Campaign Spend</relationshipLabel>
        <relationshipName>Campaign_Spend</relationshipName>
        <type>Lookup</type>
    </CustomField>