SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Sep_Budget__c.field-meta.xml
<CustomField>
        <fullName>Sep_Budget__c</fullName>
        <label>Sep Plan</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>