SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Total_Estimate__c.field-meta.xml
<CustomField>
        <fullName>Total_Estimate__c</fullName>
        <formula>Quantity__c * Unit_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>