SFUSA/force-app/main/default/objects/Campaign_Spend__c/fields/Vendor__c.field-meta.xml
<CustomField>
        <fullName>Vendor__c</fullName>
        <description>Name1 field from SAP.</description>
        <label>Vendor</label>
        <length>100</length>
        <type>Text</type>
    </CustomField>