SFUSA/force-app/main/default/objects/Campaign_Spend__c/recordTypes/Committed.recordType-meta.xml
<RecordType>
        <fullName>Committed</fullName>
        <active>true</active>
        <description>Committed Spend from SAP.</description>
        <label>Committed</label>
    </RecordType>