SFUSA/force-app/main/default/objects/Campaign_Spend__c/recordTypes/Committed_AUS.recordType-meta.xml
<RecordType>
        <fullName>Committed_AUS</fullName>
        <active>true</active>
        <description>Committed Australia</description>
        <label>Committed_AUS</label>
    </RecordType>