SFUSA/force-app/main/default/objects/Campaign_Spend__c/recordTypes/Forecast.recordType-meta.xml
<RecordType>
        <fullName>Forecast</fullName>
        <active>true</active>
        <description>Monthly Forecast allocations.</description>
        <label>Forecast</label>
    </RecordType>