SFUSA/force-app/main/default/objects/Campaign_Spend__c/recordTypes/Monthly_Plan_AUS.recordType-meta.xml
<RecordType>
        <fullName>Monthly_Plan_AUS</fullName>
        <active>true</active>
        <description>This record type shall be used for Campaign Planning Monthly Australia</description>
        <label>Monthly_Plan_AUS</label>
    </RecordType>