SFUSA/force-app/main/default/objects/Campaign_Spend__c/recordTypes/Pending.recordType-meta.xml
<RecordType>
        <fullName>Pending</fullName>
        <active>true</active>
        <description>To hold the campaign balance for PR Creation</description>
        <label>Pending</label>
    </RecordType>