SFUSA/force-app/main/default/objects/Campaign_Spend__c/validationRules/ForecastCurrencyEqualsCampaign.validationRule-meta.xml
<ValidationRule>
        <fullName>ForecastCurrencyEqualsCampaign</fullName>
        <active>false</active>
        <description>Forecast Currency must equal Campaign Currency.</description>
        <errorConditionFormula>IF( RecordType.DeveloperName = "Forecast",  text(CurrencyIsoCode)  &lt;&gt;   text(ParentCampaign__r.CurrencyIsoCode), null)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>Forecast Currency does not equal Campaign Currency.</errorMessage>
    </ValidationRule>