SFUSA/force-app/main/default/objects/Campaign_Spend__c/listViews/All.listView-meta.xml
<ListView>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ParentCampaign__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Amount__c</columns>
        <columns>Forecast_Month__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </ListView>