SFUSA/force-app/main/default/objects/Campaign_Spend__c/listViews/Campaign_Spend_Actual_Committed.listView-meta.xml
<ListView>
        <fullName>Campaign_Spend_Actual_Committed</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Campaign_Year__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>IOCode__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Campaign_Spend__c.Actual,Campaign_Spend__c.Committed</value>
        </filters>
        <label>Campaign Spend - Actual/Committed</label>
    </ListView>